# mysso

./: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  README.md  pyproject.toml
src/adminui/: .eslintrc.json  .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
src/adminui/pages/: _app.tsx
src/adminui/pages/applications2/: index.tsx
src/adminui/src/: config.ts  drfDataProvider.ts  paths.ts
src/adminui/src/app/: layout.tsx
src/adminui/src/app/api/[[...slug]]/: route.ts
src/adminui/src/components/: seo.tsx
src/adminui/src/contexts/auth/auth0/: auth-context.ts  auth-provider.tsx
src/adminui/src/contexts/auth/jwt/: auth-provider.tsx
src/adminui/src/contexts/settings/: settings-context.tsx
src/adminui/src/guards/: auth-guard.tsx
src/adminui/src/hooks/: use-auth.ts
src/adminui/src/layouts/components/: layout.tsx
src/adminui/src/layouts/dashboard/: config.tsx  layout.tsx
src/adminui/src/layouts/dashboard/account-button/: account-popover.tsx
src/adminui/src/layouts/dashboard/vertical-layout/: top-nav.tsx
src/adminui/src/layouts/marketing/: footer.tsx  pages-popover.tsx  side-nav.tsx  top-nav.tsx
src/adminui/src/layouts/root/: root.tsx
src/adminui/src/locales/: tokens.ts
src/adminui/src/locales/translations/: de.ts  en.ts  es.ts
src/adminui/src/sections/auth/: auth-issuer.tsx
src/adminui/src/sections/components/detail-lists/: detail-list-7.tsx
src/adminui/src/sections/components/tables/: table-10.tsx
src/adminui/src/sections/home/: home-hero.tsx
src/adminui/src/service/applications/: ApplicationApiService.ts
src/adminui/src/service/customers/: data.ts
src/adminui/src/theme/light/: create-components.ts
src/adminui/src/types/: application.ts
src/adminui/src/utils/: auth.ts
src/application-client/: client.py  flask-web-client.py  httpx-client-credentials.py  httpx-password.py  request-auth-client.py  starlett-web-client.py
src/application-service/: application.py
src/sso/: __main__.py  app.py  cli.py  conftest.py  exceptions.py  hashutils.py  keys.py  models.py  passwordutils.py  settings.py  ssotypes.py  tokens.py
src/sso/cli/: client.py  db.py  helpers.py  main.py  tenant.py  user.py
src/sso/endpoints/: authenticate.py  hashutils.py  jwks.py  login_form.py  oauth2_authorize.py  oauth2_token.py  openid_configuration.py  refresh.py
src/sso/endpoints/tests/: test_oauth2_token.py
src/sso/models/: auth_connection.py  base.py  client.py  persistent_token.py  tenant.py  user.py
src/sso/tests/: test_models.py
src/sso2/: conftest.py  manage.py
src/sso2/cli/: client.py  connection.py  helpers.py  main.py  tenant.py  user.py
src/sso2/core/: admin.py  apps.py  auth_backend.py  drfauth.py  email.py  formfields.py  jinja_env.py  keyutils.py  nanoid.py  pagination.py  pathrouter.py  timeutils.py  types.py  urls.py  urlutils.py
src/sso2/core/api/: application.py  tenant.py
src/sso2/core/api/tests/: test_application.py
src/sso2/core/grants/: authorization_code.py  authorization_server.py  code_challenge.py  introspection_endpoint.py  openid_hybrid.py  openid_implicit.py  openidcode.py  refresh_token.py
src/sso2/core/middleware/: tenant_middleware.py
src/sso2/core/migrations/: 0001_initial.py  0002_remove_oauth2client_user_alter_user_tenant.py  0003_authorizationcode_code_challenge_and_more.py  0004_alter_oauth2client_default_redirect_uri_and_more.py  0005_alter_oauth2token_user.py  0006_oauth2client_require_nonce.py  0007_oauth2client_require_code_challenge.py  0008_alter_oauth2client_grant_type.py  0009_alter_oauth2client_client_name_and_more.py  0010_user_updated_at_alter_oauth2client_response_type.py  0011_alter_user_managers_user_email_verified_and_more.py  0012_auto_20230429_1157.py  0013_user_phone_number.py  0014_alter_user_phone_number.py  0015_tenant_uid.py  0016_auto_20230520_2223.py  0017_auto_20230520_2223.py  0018_alter_tenant_id.py  0019_auto_20230520_2228.py  0020_remove_tenant_uid.py  0021_tenant_certificate_pem.py  0022_tenant_display_name.py
src/sso2/core/models/: __init__.py  oauth2_client_model.py  tenant_model.py  user_model.py
src/sso2/core/models/tests/: test_tenant_model.py
src/sso2/core/routes/: login_form.py  oauth2_authorize.py  oauth2_introspect.py  oauth2_revoke.py  oauth2_token.py  openid_configuration.py  openid_jwks.py  register.py  reset_password.py  subdomain.py  twofactor_setup.py  verify_email.py
src/sso2/core/routes/tests/: test_oauth2_authorize.py  test_register.py  test_reset_password.py
src/sso2/core/templates/: _base.html  access_denied.html  authorize.html  form_base.html  login.html  register.html  reset_password.html
src/sso2/core/tests/: test_drfauth.py  test_email.py  test_keyutils.py
src/sso2/django_project/: settings.py  urls.py
src/sso2/django_project/settings/: dev.py  settings.py  test.py
src/sso2/oauth/: admin.py  apps.py  urls.py
src/sso2/oauth/grants/: authentication_methods.py  authorization_code.py  authorization_server.py  code_challenge.py  introspection_endpoint.py  openid_hybrid.py  openid_implicit.py  openidcode.py  password.py  refresh_token.py
src/sso2/oauth/migrations/: 0001_initial.py  0002_oauth2authorizedapp.py  0003_oauth2clientcredential.py  0004_oauth2client_description.py  0005_remove_oauth2client_grant_type_and_more.py  0006_rename_default_redirect_uri_oauth2client_allowed_callback_uris_and_more.py  0007_application_add_created_at_and_updated_at.py
src/sso2/oauth/models/: __init__.py  authorization_code_model.py  authorized_app_model.py  oauth2_client_model.py  oauth2_token_model.py
src/sso2/oauth/routes/: oauth2_authorize.py  oauth2_introspect.py  oauth2_revoke.py  oauth2_token.py  oauth2_userinfo.py  openid_configuration.py  openid_jwks.py
src/sso2/oauth/routes/tests/: test_oauth2_authorize.py
src/sso2/portal/: apps.py  urls.py
src/sso2/portal/routes/: home.py  personal_information.py  security.py
src/sso2/portal/templates/: _base.html  home.html  personal_information.html  security.html
src/sso2/static/examples/: javascript-spa-pkce.html
(+14 files in other folders)
