[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sso"
description = 'Simple Single-Sign On Web Application.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [{ name = "Johan Dahlin", email = "jdahlin@gmail.com" }]
classifiers = [
  # https://pypi.org/classifiers/
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "authlib>=1.2.0",
    "rich",
    "typer",
]

[tool.hatch.version]
path = "src/sso2/__version__.py"

[project.optional-dependencies]
appservice = ["Flask", "pyjwt"]
appclient = ["requests", "requests-auth", "typer"]
lint = ["black", "ruff"]
types = ["mypy", "django-stubs", "django-stubs-ext", "types-requests"]
test = ["pytest", "pytest-django"]
dev = ["sso[lint,types,test,appservice,appclient]"]

[project.urls]
Source = "https://github.com/jdahlin/sso"
Tracker = "https://github.com/jdahlin/sso/issues"

[project.scripts]
ssotool = "sso2.cli.main:main_app"

[tool.ruff]
src = ["src"]
line-length = 100
select = [
  "F",     # pyflakes
  "E",     # pycodestyle (supersedes pep8)
  "W",     # pycodestyle warnings
  "C90",   # mccabe
  "I",     # isort
  "N",     # pep8-naming
  # "D",   # pydocstyle
  "UP",    # pyupgrade
  "ERA",   # eradicate
  "YTT",   # flake8-2020
  "ANN",   # flake8-annotations
  "S",     # flake8-bandit
  "BLE",   # flake8-blind-except
  "FBT",   # flake8-boolean-trap
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  # "EM",  # flake8-errmsg
  "EXE",   # flake8-executable
  "ICN",   # flake8-import-conventions
  "PIE",   # flake8-pie
  # "T20", # flake8-print
  "PYI",   # flake8-pyi
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  # "RET", # flake8-return
  "SLF",   # flake8-self
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TCH",   # flake8-type-checking
  # "ARG", # flake8-unused-arguments
  "PGH",   # pygrep-hooks
  "PLC",   # pylint Convention
  "PLE",   # pylint Error
  "PLR",   # pylint Refactor
  "PLW",   # pylint Warning
  "RUF",  # ruff-specific rules

]
ignore = [
  "ANN101",
  "ANN102",
  "S101",  # assert is useful for mypy
  "S308",  # mark_safe can be useful
]

[tool.ruff.per-file-ignores]
"src/application-client/*.py" = ["S105", "S106"]
"src/sso2/*/migrations/*.py" = ["E501"]
"src/sso2/cli/*.py" = ["B008", "PLR0913"]
"src/sso2/cli/main.py" = ["E402"]
"*/test_*.py" = ["S101"]

[tool.mypy]
mypy_path = "./src"
python_version = "3.11"
strict = true
warn_unused_configs = true
namespace_packages = false
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "sso2.django_project.settings"

[[tool.mypy.overrides]]
module = [
  "authlib",
  "authlib.oauth2",
  "authlib.oauth2.rfc6749",
  "authlib.oauth2.rfc6749.models",
  "authlib.oauth2.rfc7636",
  "authlib.oauth2.rfc7662",
  "authlib.oidc.core",
  "authlib.oidc.core.grants.util",
  "authlib.integrations.django_oauth2",
  "authlib.integrations.flask_client",
  "authlib.integrations.httpx_client",
  "authlib.jose",
  "requests_auth",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:certifi.core:",
  "ignore::DeprecationWarning:passlib.utils:",
]